# path_tracer

./: CMakeLists.txt  test_scene.json
include/: math.h  object.h  ray.h  scene.h
src/: main.cpp  math.cpp  object.cpp  scene.cpp
test/: math_test.cpp
